--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,11 +2,17 @@
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
+  "config": {
+  "commitizen": {
+    "path": "cz-conventional-changelog"
+  }
+},
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "commit": "cz"
   },
   "dependencies": {
     "autoprefixer": "10.4.14",
@@ -17,5 +23,9 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.3"
+  },
+  "devDependencies": {
+    "commitizen": "^4.3.0",
+    "cz-conventional-changelog": "^3.3.0"
   }
 }
