--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.13",
     "formik": "^2.4.3",
+    "js-cookie": "^3.0.5",
     "next": "13.4.13",
     "postcss": "8.4.27",
     "react": "18.2.0",
