--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint ."
   },
   "type": "module",
   "repository": {
@@ -28,7 +29,9 @@
   "devDependencies": {
     "@types/body-parser": "^1.19.2",
     "@types/cors": "^2.8.13",
+    "@types/eslint": "^8.44.2",
     "@types/express": "^4.17.17",
-    "@types/multer": "^1.4.7"
+    "@types/multer": "^1.4.7",
+    "eslint": "^8.47.0"
   }
 }
