--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "jose": "^4.14.4",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.6.0"
   },
