--- a/backend/package.json
+++ b/backend/package.json
@@ -33,6 +33,7 @@
     "@types/eslint": "^8.44.2",
     "@types/express": "^4.17.17",
     "@types/multer": "^1.4.7",
-    "eslint": "^8.47.0"
+    "eslint": "^8.47.0",
+    "eslint-plugin-jsdoc": "^46.4.6"
   }
 }
