--- a/backend/package.json
+++ b/backend/package.json
@@ -37,6 +37,7 @@
     "chai": "^4.3.7",
     "eslint": "^8.47.0",
     "eslint-plugin-jsdoc": "^46.4.6",
+    "eslint-plugin-mocha": "^10.1.0",
     "mocha": "^10.2.0",
     "supertest": "^6.3.3"
   }
